objects/Plan__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <externalId>true</externalId>
        <label>Plan Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>